[project]
name = "EnvUtils"
version = "0.0.1"
requires-python = ">=3.11"
authors = [
  { name = "Enviction", email = "e3nviction@gmail.com" },
]
maintainers = [
  { name = "Enviction", email = "e3nviction@gmail.com" },
]
description = "A library for utilities by Enviction."
keywords = [
  "utils",
  "database",
  "betterdict"
]
classifiers = ["Programming Language :: Python"]

[project.urls]
"Source" = "https://github.com/E3nviction/EnvUtils"
"Bug Tracker" = "https://github.com/E3nviction/EnvUtils/issues"